Fallback to C.UTF-8

--- a/flutter/Dockerfile
+++ b/flutter/Dockerfile
@@ -1,8 +1,9 @@
 FROM circleci/android:api-30
 
 RUN sudo apt-get install -y locales
-RUN /usr/sbin/locale-gen en_US.UTF-8
-ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
+RUN dpkg-reconfigure locales
+RUN /usr/sbin/locale-gen C.UTF-8
+ENV LANG='C.UTF-8' LC_ALL='C.UTF-8'
 
 RUN curl https://storage.googleapis.com/flutter_infra/releases/stable/linux/flutter_linux_2.0.6-stable.tar.xz -o /tmp/flutter.tar.xz && \
   sudo tar -xvJ -C /opt -f /tmp/flutter.tar.xz && \
