--- a/serverless/Dockerfile
+++ b/serverless/Dockerfile
@@ -1,7 +1,7 @@
-FROM circleci/node:10.16
+FROM circleci/node:14
 
-ENV SEVERLESS_VERSION="1.50"
+ENV SERVERLESS_VERSION="1.83.0"
 
 USER root
-RUN npm i -g serverless@"$SEVERLESS_VERSION"
+RUN npm i -g serverless@"$SERVERLESS_VERSION"
 USER circleci
